<resources>
    <string name="app_name">HowMuch</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_list_title">리스트</string>
    <string name="my_item_title">내 목록</string>
    <string name="title_activity_item_list_data">ItemListData</string>
    <string name="main_text">경매</string>

    <string name="add_list_on_mylist">입찰</string>
    <string name="cancel_list_on_mylist">취소</string>
    <string name="add_item">등록</string>

    <string name="add_item_name">이름</string>
    <string name="add_item_price">가격</string>
    <string name="add_item_explaination">물건 설명</string>
    <string name="type_add_item_name">물건이름을 적으세요</string>
    <string name="type_add_item_price">물건 가격을 적으세요</string>

</resources>
